Logic: implemented undo cases for add, delete and edit